--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +107,14 @@
        "b'%$\\xee\\x9fudgitg\\xffdgi\\x08gud\\x19itg\\x0bdgiugUd'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "img_bytes = []\n",
-    "with open('./ressources/ch2.bmp', 'rb') as file:\n",
+    "with open('./resources/ch2.bmp', 'rb') as file:\n",
     "    img_bytes = file.read()\n",
     "file_size = len(img_bytes)\n",
     "print(f\"This file contains: {file_size} bytes\")\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
     "    index = index + 1\n",
     "img_bytes_decrypted = bytes(img_bytes_decrypted)\n",
     "\n",
-    "with open(\"./ressources/ch2-decrypted.bmp\", \"wb\") as new_file:\n",
+    "with open(\"./resources/ch2-decrypted.bmp\", \"wb\") as new_file:\n",
     "    new_file.write(img_bytes_decrypted)"
    ]
   },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
     "myresult_bytes = bytes.fromhex(myresult)\n",
     "ciphered_xored_b1 = myresult_bytes[:bs]\n",
     "cipher = AES.new(key, AES.MODE_ECB)\n",
-    "deciphered_xoreGabrield_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
     "deciphered_b1 = plaintext[:bs].encode()\n",
     "print(f\"My iv: {''.join(format(deciphered_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))}\")"
    ]
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "\"low I'm Á¿ånd...\""
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
     "cipher = AES.new(key, AES.MODE_ECB)\n",
     "deciphered_xored_b2 = cipher.decrypt(ciphered_xored_b2)\n",
     "# it will be partial\n",
-    "deciphered_b2 = ''.join(format(decGabrieliphered_xored_b2[i] ^ printed_result_for_him_bytes[i], 'c') for i in range(bs))\n",
+    "deciphered_b2 = ''.join(format(deciphered_xored_b2[i] ^ printed_result_for_him_bytes[i], 'c') for i in range(bs))\n",
     "deciphered_b2"
    ]
   },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "'02f374a82db50b23a7d09b88f1d976dd'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-92-b1029f3cc220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./resources/rsa1Cipher.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mciphertext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcipher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mciphertext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-14-b1029f3cc220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./resources/rsa1Cipher.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mciphertext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcipher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mciphertext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/Crypto/Cipher/PKCS1_OAEP.py\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ciphertext)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m         \u001b[0;31m# See 7.1.2 in RFC3447\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 161\u001b[0;31m         \u001b[0mmodBits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCrypto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUtil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    162\u001b[0m         \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mceil_div\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodBits\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Convert from bits to bytes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0mhLen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_hashObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdigest_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'n'"
      ]
