--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -14,7 +14,7 @@
     "## Defense reminder\n",
     "You'll be asked to provide a detailed write-up of how you solved each part of the challenges. Make sure to keep a text document or a presentation or something where you write everything you do and everything you try as you go.\n",
     "\n",
-    "## Challenge One"
+    "## Basic 1"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Challenge Two: I accidentally XOR-encrypted this file...\n",
+    "## Basic 3: I accidentally XOR-encrypted this file...\n",
     "Is there any way you can help me recover it ? It's at /ch2.bmp\n",
     "\n",
     "image link: https://crypto.blackfoot.io/ch2.bmp\n",
@@ -280,6 +280,37 @@
     "It worked !!!!\n",
     "\n",
     "The created bmp is in the resource folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hash 1: Ooops I got carried away and hashed my super secret password\n",
+    "Now i can't find it again, please help !!\n",
+    "\n",
+    "Here is the hash: 37F62F1363B04DF4370753037853FE88\n",
+    "    \n",
+    "### What to do when we have a hash\n",
+    "\n",
+    "The main purpose of a hash is not to be possible to reverse engineer, the problem is: some algorithms like the md5 exists since so many times that it exists some websites that lists millions of possiblity\n",
+    "    \n",
+    "This one is not an exception, i went to: https://crackstation.net and get to the page on the screenshot below\n",
+    "\n",
+    "![](./img/capture_3.png)\n",
+    "\n",
+    "result: trololo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hash 2: I'm looking hard but i really can't find it this time ! HELP !!!\n",
+    "\n",
+    "hash: 9ED61B711748CFB719DB7B79D0A0062F\n",
+    "\n",
+    "This time the website used above was of no help"
    ]
   },
   {
