--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -69,6 +69,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Basic 2:\n",
+    "57656C6C20646F6E6520212054686520666C616720666F722074686973206368616C6C656E67652069732074686973206D6573736167652E\n",
+    "\n",
+    "??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Basic 3: I accidentally XOR-encrypted this file...\n",
     "Is there any way you can help me recover it ? It's at /ch2.bmp\n",
     "\n",
