--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -76,11 +76,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Since there was no text for this exercise I immediately thought that this string could be an hexadecimal representation of the instruction. So I tried translating it from hecxadecimal to ASCII and ... Voila !\n",
+    "\n",
+    "![](./img/screen.png)"
+   ]
   },
   {
    "cell_type": "markdown",
