hash 2 hash identification

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since there was no text for this exercise I immediately thought that this string could be an hexadecimal representation of the instruction. So I tried translating it from hecxadecimal to ASCII and ... Voila !\n",
+    "Since there was no text for this exercise I immediately thought that this string could be an hexadecimal representation of an ASCII string holding the instructions. So I tried translating it from hecxadecimal to ASCII and ... Voila !\n",
     "\n",
     "![](./img/screen.png)"
    ]
@@ -329,7 +329,11 @@
     "\n",
     "hash: 9ED61B711748CFB719DB7B79D0A0062F\n",
     "\n",
-    "This time the website used above was of no help"
+    "This time the website used above was of no help\n",
+    "\n",
+    "So we tried identifying what kind of hash this could be with hash-identifier\n",
+    "\n",
+    "![](./img/hash_identification.png)"
    ]
   },
   {
