--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,101 +83,7 @@
      "output_type": "stream",
      "text": [
       "key = {'a': 'x', 'b': 'w', 'c': 'v', 'd': 'a', 'e': 'c', 'f': 'f', 'g': 'j', 'h': 'm', 'i': 'l', 'j': 'd', 'k': 'k', 'l': 'g', 'm': 'h', 'n': 'j', 'o': 'q', 'p': 'b', 'q': 'r', 'r': 'e', 's': 'i', 't': 's', 'u': 'n', 'v': 't', 'w': 'u', 'x': 'o', 'y': 'y', 'z': 'p'}\n",
-      "\n",
-      "The interlocking network of stalks and branches and creepers was skeletal, the fossil yard of an extinct species of fineboned insectoid creatures. All of these bones, then, seemed to have been stained by sun and earth from an original living white to brown, and not the tough fibrous flower and seed-spilling green they actually once had been. Howard wondered about a man who had never seen summer, a winter man, examining the weeds and making this inference -- that he was looking at an ossuary. The man would take that as true and base his ideas of the world on that mistake.\n",
-      "\n",
-      "'Ah,' said Gandalf, 'now we come to it. I think Gollum tried to. He set out and came back westward, as far as the Great River. But then he turned aside. He was not daunted by the distance, I am sure. No, something else drew him away. So my friends think, those that hunted him for me. \n",
-      "\n",
-      "'The Wood-elves tracked him first, an easy task for them, for his trail was still fresh then. Through Mirkwood and back again it led them, though they never caught him. The wood was full of the rumour of him, dreadful tales even among beasts and birds. The Woodmen said that there was some new \n",
-      "\n",
-      "terror abroad, a ghost that drank blood. It climbed trees to find nests; it crept into holes to find the young; it slipped through windows to find cradles. \n",
-      "\n",
-      "'But at the western edge of Mirkwood the trail turned away. It wandered off southwards and passed out of the Wood-elves' ken, and was lost. And then I made a great mistake. Yes, Frodo, and not the first; though I fear it may prove the worst. I let the matter be. I let him go; for I had much else to think of at that time, and I still trusted the lore of Saruman. \n",
-      "\n",
-      "'Well, that was years ago. I have paid for it since with many dark and dangerous days. The trail was long cold when I took it up again, after Bilbo left here. And my search would have been in vain, but for the help that I had from a friend: Aragorn, the greatest traveller and huntsman of this age of the world. Together we sought for Gollum down the whole length of Wilderland, without hope, and without success. But at last, when I had given up the chase and turned to other parts, Gollum was found.\n",
-      "\n",
-      "# WELCOME TO THE CRYPTOGRAPHY MODULE\n",
-      "\n",
-      "By deciphering this page, you have solved your first challenge. Congratulations! :)\n",
-      "\n",
-      "We recommend you write a small program to decipher this page automatically as we *will* be updating it with new information & new challenges often. The key used to encrypt this page will *not* change, and if it does we will write so on Teams.\n",
-      "\n",
-      "We also remind you to **create a Team** called \"CRYPT1 - YOURTEAMNAME\", this is where you'll be able to ask us for hints and where we will be doing the final defense.\n",
-      "\n",
-      "# THE PROJECT\n",
-      "\n",
-      "The project consists of a few cryptography challenges detailed below. Some challenges can lead to other, harder challenges, once you've solved them.\n",
-      "\n",
-      "Every time you solve a challenge, you should **ping us** in your team's channel with the solution you found, we'll review it and confirm that you got the right answer.\n",
-      "\n",
-      "During the final defense, you will be graded on:\n",
-      "- How many challenges you've solved.\n",
-      "- *How* you solved those challenges.\n",
-      "- Your ability to explain your reasoning.\n",
-      "- Any scripts you submit as proof that you did the task (if it required scripting)\n",
-      "\n",
-      "It goes without saying that if you scripts or your turn-in share too much in common with another group you'll both get -42. Please don't share solutions, first of all it's not fun, and second of all it sucks for them too. Third of all, you'll be ranked relative to each other (each challenge is worth LESS if MORE people solve it), so sharing solutions is the best way to lose points.\n",
-      "\n",
-      "This module is made with love and with the intent of being fun for you all, so play by the rules and enjoy <3\n",
-      "\n",
-      "# TURN-IN\n",
-      "\n",
-      "You should turn in a detailed write-up of all the exercises you did, starting with this one.\n",
-      "\n",
-      "It can be either a powerpoint presentation or a PDF, but we should be able to download it to check it out later. You'll also present your writeup during the defense.\n",
-      "\n",
-      "# EXERCISES\n",
-      "\n",
-      "## Basic\n",
-      "### BASIC1:\n",
-      "You already did it! It's to get to this page!\n",
-      "\n",
-      "### BASIC2:\n",
-      "57656c6c20646f6e6520212054686520666c616720666f722074686973206368616c6c656e67652069732074686973206d6573736167652e\n",
-      "\n",
-      "### BASIC3:\n",
-      "I accidentally XOR-encrypted this file... Is there any way you can help me recover it? It's at: /ch2.bmp\n",
-      "\n",
-      "### BASIC4:\n",
-      "Oh no, I was browsing the internet and I accidentally encoded a very important picture, I'm not sure how...\n",
-      "I panicked and I closed the tab I was on, and now I can't find it again!\n",
-      "\n",
-      "I need the picture, and I'll give you a bonus if you can find the tab I was on!\n",
-      "/basic4.webp\n",
-      "\n",
-      "## Hash\n",
-      "### HASH1:\n",
-      "Ooops, I got carried away and hashed my super-secret password. Now I can't find it again ! Please, help me !\n",
-      "Here's the hash: 37f62f1363b04df4370753037853fe88\n",
-      "\n",
-      "### HASH2:\n",
-      "I'm looking hard but I really can't find it this time ! Help !!!\n",
-      "9ed61b711748cfb719db7b79d0a0062f\n",
-      "\n",
-      "## Symmetric\n",
-      "### SYM1:\n",
-      "Oh no, I just lost the IV we use for every encrypted file in our production system...\n",
-      "All I have is a screenshot of one time i encrypted some data with it, but the screenshot got edited by a l337 hacker!\n",
-      "Can you help me? The screenshot is here: /ch3.jpg\n",
-      "\n",
-      "### SYM2: Bite-flip\n",
-      "I have a smart dildo but somebody locked me out of the admin space. Help me get back in, I have needs !\n",
-      "noflag.crypto.blackfoot.io\n",
-      "\n",
-      "## RSA\n",
-      "### RSA1: Warm up\n",
-      "Let's see if you got my class. Download /rsa1.pem, it's a public key.\n",
-      "Now download /rsa1Cipher.txt\n",
-      "The message was encrypted using the \"PKCS1 OAEP\" algorithm with this public key. Try decrypting it.\n",
-      "Oh yeah - and here's a number that could be useful ;)\n",
-      "p = 11901234461494228310064076121482038286429650089208969229876184007349956782094248940290427800597817633601014470221576037327691902428151823981665392121868907\n",
-      "\n",
-      "### RSA2: ManyKeys\n",
-      "Find the challenge yourself.\n",
-      "\n",
-      "### RSA3: Multiple Recipients\n",
-      "The IT department sent a message to a few employees, and we've intercepted it. We should retrieve this potentially vital information - this IT department uses a homemade RSA implementation, this is our chance!\n",
-      "/canudigit.jip\n"
+      "\n"
      ]
     }
    ],
@@ -205,8 +111,7 @@
     "        content_string += c\n",
     "        continue\n",
     "    content_string += chr(c)\n",
-    "\n",
-    "print(content_string)"
+    "\n"
    ]
   },
   {
@@ -543,6 +448,127 @@
     "It worked !!!!\n",
     "\n",
     "The created bmp is in the resource folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic 2: i accidentally encrypted this image\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len: 57956\n",
+      "\n",
+      "header ciphered: {'riff': b'%v0{', 'length+8': b'\\x11\\x91Qa', 'webp': b'\\x07\\x17p\\x1e', 'vp8': b'<\\x00\\x00/', 'length': b'5v=M'}\n",
+      "\n",
+      "header real{'riff': b'RIFF', 'length+8': b'\\\\\\xe2\\x00\\x00', 'webp': b'WEBP', 'vp8': b'VP8 ', 'length': b'P\\xe2\\x00\\x00'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "#url = \"http://crypto.blackfoot.io/basic4.webp\"\n",
+    "#html = urlopen(url).read()\n",
+    "\n",
+    "ciphered = None\n",
+    "with open('./resources/basic4.webp', 'rb') as f:\n",
+    "    ciphered = f.read()\n",
+    "\n",
+    "file_size_real = len(ciphered)    \n",
+    "file_size_real_bytes = file_size_real.to_bytes(4, byteorder = 'little')\n",
+    "\n",
+    "def unpack_as_bytes(nb, bytes_nb = 4, byteorder = 'little'):\n",
+    "    return nb.to_bytes(bytes_nb, byteorder)\n",
+    "\n",
+    "header = {\n",
+    "    \"riff\": ciphered[:4],\n",
+    "    \"length+8\": ciphered[4:8],\n",
+    "    \"webp\": ciphered[8:12],\n",
+    "    \"vp8\": ciphered[12:16],\n",
+    "    \"length\": ciphered[16:20]\n",
+    "}\n",
+    "\n",
+    "header_real_non_l = {\n",
+    "    \"riff\": b'RIFF',\n",
+    "    \"length+8\": unpack_as_bytes(file_size_real - 8),\n",
+    "    \"webp\": b'WEBP',\n",
+    "    \"vp8\": b'VP8 ',\n",
+    "    \"length\": unpack_as_bytes(file_size_real - 20)\n",
+    "}\n",
+    "\n",
+    "print(f\"len: {file_size_real}\\n\\nheader ciphered: {header}\\n\\nheader real{header_real_non_l}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[119, 63, 118, 61, 77, 115, 81, 97, 80, 82, 50, 78, 106, 80, 56, 15, 101, 148, 61, 77]\n",
+      "key: 773f763d4d7351615052324e6a50380f65943d4d\n",
+      "{'riff': [119, 63, 118, 61], 'length+8': [77, 115, 81, 97], 'webp': [80, 82, 50, 78], 'vp8': [106, 80, 56, 15], 'length': [101, 148, 61, 77]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "header_xored = {\n",
+    "    key:[header[key][i] ^ header_real_non_l[key][i] \n",
+    "         for i in range(len(value))] \n",
+    "    for key, value in header.items()\n",
+    "}\n",
+    "\n",
+    "all_xors = []\n",
+    "for _, sublist in header_xored.items():\n",
+    "    for item in sublist:\n",
+    "        all_xors.append(item)\n",
+    "print(all_xors)\n",
+    "print(f\"key: {''.join(format(key, '02x') for key in all_xors)}\")\n",
+    "print(header_xored)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's imagine that the actual key was 6 bytes long\n",
+    "index = 0\n",
+    "img_bytes_decrypted = []\n",
+    "for b in ciphered:\n",
+    "    img_bytes_decrypted.append(b ^ all_xors[index % len(key)])\n",
+    "    index = index + 1\n",
+    "img_bytes_decrypted = bytes(img_bytes_decrypted)\n",
+    "\n",
+    "with open(\"./resources/basic4-decrypted.webp\", \"wb\") as new_file:\n",
+    "    new_file.write(img_bytes_decrypted)"
    ]
   },
   {
